[gd_scene load_steps=4 format=3 uid="uid://qss1tso47pqb"]

[ext_resource type="Script" path="res://slider_option.gd" id="1_gd56u"]
[ext_resource type="Texture2D" uid="uid://lavrehuvmvug" path="res://icons/Recycling Logo.svg" id="2_osyly"]
[ext_resource type="Texture2D" uid="uid://dnyitot5cjo8s" path="res://icons/Oil Drop Icon.svg" id="3_8wodq"]

[node name="FoodOption" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1476.0
offset_bottom = -908.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gd56u")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 16.0
offset_right = 293.0
offset_bottom = 39.0
text = "Eco Food Sourcing"
horizontal_alignment = 1

[node name="Slider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 101.64
offset_top = 64.64
offset_right = 338.64
offset_bottom = 80.64
min_value = -50.0
max_value = 50.0

[node name="EcoPercent" type="Label" parent="."]
layout_mode = 0
offset_left = 227.64
offset_top = 87.64
offset_right = 338.64
offset_bottom = 110.64
text = "0% Eco"
horizontal_alignment = 2

[node name="ProfitPercent" type="Label" parent="."]
layout_mode = 0
offset_left = 101.64
offset_top = 87.64
offset_right = 221.64
offset_bottom = 110.64
text = "0% Profit"

[node name="PlantIcon" type="Sprite2D" parent="."]
position = Vector2(374.99997, 69)
scale = Vector2(0.085, 0.085)
texture = ExtResource("2_osyly")

[node name="OilDropIcon" type="Sprite2D" parent="."]
position = Vector2(78.64, 78.64)
scale = Vector2(0.16, 0.16)
texture = ExtResource("3_8wodq")

[connection signal="value_changed" from="Slider" to="." method="_on_slider_value_changed"]
